--- a/LearningFSharp/LearningFSharp.FSPROJ
+++ b/LearningFSharp/LearningFSharp.FSPROJ
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Resources\Functional Programming For Dummies.PDF" />
+    <None Include="Resources\Functional Programming Using F#.EPUB" />
+    <None Include="Resources\Get Programming With F# - A Guide For .NET Developers.PDF" />
     <None Include="Scripts\CalculateAge.FSX" />
     <None Include="Scripts\Greeting.FSX" />
     <Compile Include="Main.FS" />
